--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bxslider": "^4.2.17",
     "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
-    "react-marquee-slider": "^1.1.5"
+    "react-marquee-slider": "^1.1.5",
+    "react-mouse-position": "^1.0.0",
+    "react-move": "^6.5.0",
+    "react-use-mouse-position": "^1.0.4",
+    "tiny-slider": "^2.9.4"
   },
   "devDependencies": {
     "eslint": "^8",
